--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ footer {
 }
 
 .favorites-count {
-    background-color: #e74c3c;
+    background-color: #9eb0c2;
     color: white;
     font-size: 11px;
     font-weight: 600;
